--- a/index.html
+++ b/index.html
@@ -10,14 +10,46 @@
 
     <div class="main-1">
 
-        <div class="left-rectangle-container">
-            
+        <div class="left-margin">
+
+            <div class="logo-container">
+                <div class="logo">
+                    <span class="big-P-1">P</span>
+                    <span class="big-P-2">P</span>
+                </div>
+                <div class="name"><b>Pajeet</b></div>
+            </div>
+
             <div class="navigation-buttons">
-                <div class="button">A</div>
-                <div class="button">B</div>
-                <div class="button">C</div>
-                <div class="button">D</div>
-                <div class="button">E</div>
+                <button class="home-button" onclick="this.classList.toggle('selected')">
+                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                </button>
+
+                <button class="home-button" onclick="this.classList.toggle('selected')">
+                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                </button>
+
+                <button class="home-button" onclick="this.classList.toggle('selected')">
+                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                </button>
+
+                <button class="home-button" onclick="this.classList.toggle('selected')">
+                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                </button>
+            </div>
+
+            <div class="social-buttons">
+                <button class="twitter-button" onclick="this.classList.toggle('selected')">
+                    <!-- <img src="x./resources/twitter1.png" alt="Twitter Icon" class="twitter-icon"> -->a
+                </button>
+
+                <button class="twitter-button" onclick="this.classList.toggle('selected')">
+                    <!-- <img src="x./resources/twitter1.png" alt="Twitter Icon" class="twitter-icon"> -->a
+                </button>
+
+                <button class="twitter-button" onclick="this.classList.toggle('selected')">
+                    <!-- <img src="x./resources/twitter1.png" alt="Twitter Icon" class="twitter-icon"> -->a
+                </button>
             </div>
 
         </div>
