Very rough, but promising checkpoint

--- a/index.html
+++ b/index.html
@@ -22,51 +22,36 @@
 
             <div class="navigation-buttons">
                 <button class="home-button" onclick="this.classList.toggle('selected')">
-                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                    <img src="./resources/home1.png" alt="Home" class="home-image-1">
+                    <div class="name">Home</div>
                 </button>
 
                 <button class="home-button" onclick="this.classList.toggle('selected')">
-                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                    <img src="./resources/home1.png" alt="Home" class="home-image-1">
+                    <div class="name">Home</div>
                 </button>
 
                 <button class="home-button" onclick="this.classList.toggle('selected')">
-                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                    <img src="./resources/home1.png" alt="Home" class="home-image-1">
+                    <div class="name">Home</div>
                 </button>
 
                 <button class="home-button" onclick="this.classList.toggle('selected')">
-                    <!-- <img src="x./resources/home1.png" alt="Home Icon" class="home-icon"> -->a
+                    <img src="./resources/home1.png" alt="Home" class="home-image-1">
+                    <div class="name">Home</div>
                 </button>
             </div>
 
             <div class="social-buttons">
-                <button class="twitter-button" onclick="this.classList.toggle('selected')">
-                    <!-- <img src="x./resources/twitter1.png" alt="Twitter Icon" class="twitter-icon"> -->a
+                <button class="image-button">
+                    <img src="./resources/home1.png" alt="Home" class="button-image">
                 </button>
-
-                <button class="twitter-button" onclick="this.classList.toggle('selected')">
-                    <!-- <img src="x./resources/twitter1.png" alt="Twitter Icon" class="twitter-icon"> -->a
+                <button class="image-button">
+                    <img src="./resources/home1.png" alt="Home" class="button-image">
                 </button>
-
-                <button class="twitter-button" onclick="this.classList.toggle('selected')">
-                    <!-- <img src="x./resources/twitter1.png" alt="Twitter Icon" class="twitter-icon"> -->a
+                <button class="image-button">
+                    <img src="./resources/home1.png" alt="Home" class="button-image">
                 </button>
-            </div>
-
-        </div>
-
-        <div class="remaining-container">
-
-            <div class="hello-text">
-                <p><b>Hello,<br>jour kompjuter <br> has
-                <span class="big-W-1">W</span><span class="big-W-2">W</span>ajrys.</b></p>
-
-                <div class="sub-hello-text">
-                    <p>Indian hackars control this machine now</p>
-                </div>
-
-                <a href="your-target-page.html" class="pay-button">
-                    Pay shitcoin
-                </a>
             </div>
 
         </div>
