--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
             <div class="logo-container">
                 <div class="logo">
-                    <span class="big-P-1">P</span>
-                    <span class="big-P-2">P</span>
+                    <span class="big-S-1">S</span>
+                    <span class="big-S-2">S</span>
                 </div>
-                <div class="name"><b>Pajeet</b></div>
+                <div class="name"><b>Simon</b></div>
             </div>
 
             <div class="navigation-buttons">
@@ -63,20 +63,25 @@
                     I'm
                     <div class="name-2">
                         <div class="logo-2">
-                            <span class="big-P-1">P</span>
-                            <span class="big-P-2">P</span>
+                            <span class="big-S-1">S</span>
+                            <span class="big-S-2">S</span>
                         </div>
-                        ajeet,
+                        imon.
                     </div><br>
-                    Indian Hackar
+                    I study applied CS.
                 </div>
         
                 <div class="sub-text">
-                    Beginner Hackar
+                    Beginner Front End Developer
                 </div>
 
+                <a href="your-target-page.html" class="contact-button">
+                    Contact me
+                </a>
+
             </div>
-            <img src="./resources/hacker.jpg" alt="Logo" class="uj-logo">
+
+            <img src="./resources/godlo.png" alt="Logo" class="uj-logo">
     </div>
 
 </body>
