--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </div>
 
             <img src="./resources/godlo.png" alt="Logo" class="uj-logo">
+        </div>
     </div>
 
 </body>
