home highlihted while on it

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="navigation-buttons">
-                <a href="home.html" class="home-button">
+                <a href="home.html" class="home-button current-page">
                     <img src="./resources/home1.png" alt="Home" class="home-image-1">
                     <div class="name">Home</div>
                 </a>
