--- a/home.html
+++ b/home.html
@@ -41,14 +41,14 @@
             </div>
 
             <div class="social-buttons">
-                <button class="small-button-with-image">
-                    <img src="./resources/home1.png" alt="Home" class="image-of-small-button">
+                <button class="small-button-with-image git-button">
+                    <img src="./resources/git1.png" alt="Home" class="image-of-small-button">
                 </button>
-                <button class="small-button-with-image">
-                    <img src="./resources/home1.png" alt="Home" class="image-of-small-button">
+                <button class="small-button-with-image twt-button">
+                    <img src="./resources/twt1.png" alt="Home" class="image-of-small-button">
                 </button>
-                <button class="small-button-with-image">
-                    <img src="./resources/home1.png" alt="Home" class="image-of-small-button">
+                <button class="small-button-with-image lnk-button">
+                    <img src="./resources/lnk1.png" alt="Home" class="image-of-small-button">
                 </button>
             </div>
         </div>
