Working navigation buttons, removed bad current page logic

--- a/home.html
+++ b/home.html
@@ -41,15 +41,15 @@
             </div>
 
             <div class="social-buttons">
-                <button class="small-button-with-image git-button">
-                    <img src="./resources/git1.png" alt="Home" class="image-of-small-button">
-                </button>
-                <button class="small-button-with-image twt-button">
-                    <img src="./resources/twt1.png" alt="Home" class="image-of-small-button">
-                </button>
-                <button class="small-button-with-image lnk-button">
-                    <img src="./resources/lnk1.png" alt="Home" class="image-of-small-button">
-                </button>
+                <a href="https://github.com" target="_blank" class="small-button-with-image git-button">
+                    <img src="./resources/git1.png" alt="GitHub" class="image-of-small-button">
+                </a>
+                <a href="https://twitter.com" target="_blank" class="small-button-with-image twt-button">
+                    <img src="./resources/twt1.png" alt="Twitter" class="image-of-small-button">
+                </a>
+                <a href="https://linkedin.com" target="_blank" class="small-button-with-image lnk-button">
+                    <img src="./resources/lnk1.png" alt="LinkedIn" class="image-of-small-button">
+                </a>
             </div>
         </div>
 
