--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MyWebpage</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="skills.css">
 </head>
 <body>
 
