temp skills table

--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,45 @@
         </div>
 
         <div class="remaining-space">
-            aaa
+            <div class="table-container">
+                <table class="skills-table">
+                    <thead>
+                        <tr>
+                            <th>Programming Language</th>
+                            <th>Proficiency</th>
+                            <th>Notes</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Python</td>
+                            <td>Good</td>
+                            <td>I did one big project in Python</td>
+                        </tr>
+                        <tr>
+                            <td>JavaScript / TypeScript</td>
+                            <td>Intermediate</td>
+                            <td>Experience with web development</td>
+                        </tr>
+                        <tr>
+                            <td>Java</td>
+                            <td>Expert</td>
+                            <td>Used extensively in frontend development</td>
+                        </tr>
+                        <tr>
+                            <td>C / C++</td>
+                            <td>Expert</td>
+                            <td>Used extensively in frontend development</td>
+                        </tr>
+                        <tr>
+                            <td>HTML & CSS</td>
+                            <td>Expert</td>
+                            <td>Used extensively in frontend development</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
