--- a/skills.html
+++ b/skills.html
@@ -70,26 +70,41 @@
                             <td>I did one big project in Python</td>
                         </tr>
                         <tr>
-                            <td>JavaScript / TypeScript</td>
+                            <td>JavaScript</td>
                             <td>Intermediate</td>
                             <td>Experience with web development</td>
-                        </tr>
-                        <tr>
-                            <td>Java</td>
-                            <td>Expert</td>
-                            <td>Used extensively in frontend development</td>
-                        </tr>
-                        <tr>
-                            <td>C / C++</td>
-                            <td>Expert</td>
-                            <td>Used extensively in frontend development</td>
                         </tr>
                         <tr>
                             <td>HTML & CSS</td>
                             <td>Expert</td>
                             <td>Used extensively in frontend development</td>
                         </tr>
-
+                    </tbody>
+                </table>
+                <table class="skills-table soft-skills-table">
+                    <thead>
+                        <tr>
+                            <th>Soft Skill</th>
+                            <th>Proficiency</th>
+                            <th>Notes</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Leadership</td>
+                            <td>Excellent</td>
+                            <td>Managed teams in multiple projects</td>
+                        </tr>
+                        <tr>
+                            <td>Communication</td>
+                            <td>Good</td>
+                            <td>Regular presenter at team meetings</td>
+                        </tr>
+                        <tr>
+                            <td>Time Management</td>
+                            <td>Very Good</td>
+                            <td>Consistently meet project deadlines</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
