Projects base work

--- a/projects.html
+++ b/projects.html
@@ -54,8 +54,34 @@
         </div>
 
         <div class="remaining-space">
-            aaa
+            <div class="projects">
+                <section>
+                    <h1>Project 1: Smart Home Automation</h1>
+                    <ul>
+                        <li>A system to automate household devices like lights and appliances.</li>
+                        <li>Controlled remotely through a mobile application.</li>
+                        <li>Features advanced security with encryption.</li>
+                    </ul>
+                </section>
+                <section>
+                    <h1>Project 2: E-Commerce Platform</h1>
+                    <ul>
+                        <li>A web-based platform for buying and selling products.</li>
+                        <li>Integrated payment gateways and secure login.</li>
+                        <li>Analytics for personalized recommendations.</li>
+                    </ul>
+                </section>
+                <section>
+                    <h1>Project 3: AI Chatbot</h1>
+                    <ul>
+                        <li>A chatbot for automated customer support.</li>
+                        <li>Uses machine learning for natural language understanding.</li>
+                        <li>Seamlessly integrates into existing systems.</li>
+                    </ul>
+                </section>
+            </div>
         </div>
+        
     </div>
 
     <footer class="footer">
