--- a/education.html
+++ b/education.html
@@ -54,8 +54,43 @@
         </div>
 
         <div class="remaining-space">
-            aaa
+
+            <div class="Formal-education-container">
+                <div class="main-header">
+                    Projects I've finished:
+                </div>
+                <div class="Content">
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+
+            <div class="Courses-finished-container">
+                <div class="main-header">
+                    Projects I've finished:
+                </div>
+                <div class="Content">
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+
         </div>
+
     </div>
 
     <footer class="footer">
