Basic modal window when pressing contact me

--- a/home.html
+++ b/home.html
@@ -80,11 +80,20 @@
         </div>
     </div>
 
+    <div id="contactModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <p>Here is the contact information or any other text you want to display!</p>
+        </div>
+    </div>
+
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Szymon Urbański. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
