Education scrolling update

--- a/education.html
+++ b/education.html
@@ -69,6 +69,33 @@
                             <li>Seamlessly integrates into existing systems.</li>
                         </ul>
                     </section>
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
                 </div>
             </div>
 
@@ -77,6 +104,42 @@
                     Projects I've finished:
                 </div>
                 <div class="Content">
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Project 1: Smart Home Automation</h1>
+                        <ul>
+                            <li>A system to automate household devices like lights and appliances.</li>
+                            <li>Controlled remotely through a mobile application.</li>
+                            <li>Features advanced security with encryption.</li>
+                            <li>Seamlessly integrates into existing systems.</li>
+                        </ul>
+                    </section>
                     <section>
                         <h1>Project 1: Smart Home Automation</h1>
                         <ul>
