--- a/education.html
+++ b/education.html
@@ -53,16 +53,63 @@
         <div class="remaining-space">
             <div class="container">
                 <div class="block">
-                  <h2 class="header">Header 1</h2>
+                  <h2 class="header">Formal education</h2>
                   <div class="content">
-                    <p>Short content in block 1.</p>
+                    <section>
+                        <h1>Primary school in Kleosin</h1>
+                        <ul>
+                            <li>2010 - 2016</li>
+                        </ul>
+                        <h1>Middle school in Kleosin</h1>
+                        <ul>
+                            <li>2016 - 2019</li>
+                        </ul>
+                        <h1>The 4th High School in Bialystok</h1>
+                        <ul>
+                            <li>2019 - 2022</li>
+                        </ul>
+                        <h1>Jagiellonian University</h1>
+                        <ul>
+                            <li>2019 - Now</li>
+                        </ul>
+                    </section>
                   </div>
                 </div>
                 <div class="block">
-                  <h2 class="header">Header 2</h2>
+                  <h2 class="header">Courses finished</h2>
                   <div class="content">
-                    <p>Content of block 2 has multiple lines to demonstrate alignment of the headers between blocks.</p>
-                    <p>Another line of content in block 2.</p>
+                    <section>
+                        <h1>Web Development Bootcamp</h1>
+                        <ul>
+                            <li>2023 - May</li>
+                            <li>HTML, CSS, JavaScript</li>
+                            <li>Comprehensive bootcamp covering the fundamentals of HTML, CSS, and JavaScript, with a focus on building responsive websites.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Responsive Web Design with Flexbox and Grid</h1>
+                        <ul>
+                            <li>2023 - August</li>
+                            <li>CSS, Flexbox, CSS Grid</li>
+                            <li>Fully responsive and mobile-friendly web pages using modern CSS layout techniques like Flexbox and Grid.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>JavaScript for Beginners</h1>
+                        <ul>
+                            <li>2022 - December</li>
+                            <li>JavaScript</li>
+                            <li>An introductory course to JavaScript that covers the basics of programming, data structures, and control flow.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h1>Advanced JavaScript: Asynchronous Programming</h1>
+                        <ul>
+                            <li>2024 - February</li>
+                            <li>JavaScript, Async/Await, Promises</li>
+                            <li>Explore advanced JavaScript concepts such as asynchronous programming, promises, and async/await to handle non-blocking code efficiently.</li>
+                        </ul>
+                    </section>
                   </div>
                 </div>
               </div>              
