Modal content and style

--- a/home.html
+++ b/home.html
@@ -83,7 +83,14 @@
     <div id="contactModal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <p>Here is the contact information or any other text you want to display!</p>
+            <div class="modal-body">
+                <h2>Contact Information</h2>
+                <div class="contact-info">
+                    <div><strong>Email:</strong> example@email.com</div>
+                    <div><strong>Phone:</strong> +48 123 456 789</div>
+                </div>
+                <a href="mailto:example@email.com" class="contact-button">Send an Email</a>
+            </div>
         </div>
     </div>
 
