Skills content and formatting

--- a/skills.html
+++ b/skills.html
@@ -67,17 +67,37 @@
                         <tr>
                             <td>Python</td>
                             <td>Good</td>
-                            <td>I did one big project in Python</td>
+                            <td>Finished multiple intermediate and one advanced project.</td>
                         </tr>
                         <tr>
-                            <td>JavaScript</td>
-                            <td>Intermediate</td>
-                            <td>Experience with web development</td>
+                            <td>JavaScript / TypeScript</td>
+                            <td>Good</td>
+                            <td>Used for backend in multiple passion projects.</td>
                         </tr>
                         <tr>
                             <td>HTML & CSS</td>
-                            <td>Expert</td>
-                            <td>Used extensively in frontend development</td>
+                            <td>Intermediate</td>
+                            <td>Finished a few courses, still polishing my skills.</td>
+                        </tr>
+                        <tr>
+                            <td>Rust</td>
+                            <td>Basic</td>
+                            <td>Used in a few simple passion projects.</td>
+                        </tr>
+                        <tr>
+                            <td>Java</td>
+                            <td>Basic</td>
+                            <td>Learned basics at university.</td>
+                        </tr>
+                        <tr>
+                            <td>C / C++</td>
+                            <td>Basic</td>
+                            <td>Learned basics at university.</td>
+                        </tr>
+                        <tr>
+                            <td>PHP</td>
+                            <td>Basic</td>
+                            <td>Learned basics at university.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -91,19 +111,24 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Leadership</td>
-                            <td>Excellent</td>
-                            <td>Managed teams in multiple projects</td>
-                        </tr>
-                        <tr>
                             <td>Communication</td>
-                            <td>Good</td>
-                            <td>Regular presenter at team meetings</td>
+                            <td>Excellent</td>
+                            <td>Experience working with other programmers on different projects and presenting them in front of an audience.</td>
                         </tr>
                         <tr>
-                            <td>Time Management</td>
-                            <td>Very Good</td>
-                            <td>Consistently meet project deadlines</td>
+                            <td>Time management</td>
+                            <td>Excellent</td>
+                            <td>Consistently meet project deadlines.</td>
+                        </tr>
+                        <tr>
+                            <td>Working under pressure</td>
+                            <td>Good</td>
+                            <td>Consitently able to produce good results, even under pressure.</td>
+                        </tr>
+                        <tr>
+                            <td>Leadership</td>
+                            <td>Good</td>
+                            <td>Decent experience leading different projects during university</td>
                         </tr>
                     </tbody>
                 </table>
