Projects content and style

--- a/skills.html
+++ b/skills.html
@@ -67,7 +67,7 @@
                         <tr>
                             <td>Python</td>
                             <td>Good</td>
-                            <td>Finished multiple intermediate and one advanced project.</td>
+                            <td>Finished a major project and regularly use it for scripting.</td>
                         </tr>
                         <tr>
                             <td>JavaScript / TypeScript</td>
