--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
                 </div>
         
                 <div class="sub-text">
-                    Beginner Front End Developer
+                    Aspiring Front End Developer
                 </div>
 
                 <a href="your-target-page.html" class="contact-button">
