--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
                 </div>
         
                 <div class="sub-text">
-                    Aspiring Front End Developer
+                    Beginner Front End Developer
                 </div>
 
                 <a href="your-target-page.html" class="contact-button">
@@ -95,7 +95,7 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-container">
+        <div class="container">
             <p>&copy; 2024 Szymon Urbański. All rights reserved.</p>
         </div>
     </footer>
