--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-container">
+        <div class="container">
             <p>&copy; 2024 Szymon Urbański. All rights reserved.</p>
         </div>
     </footer>
