--- a/skills.html
+++ b/skills.html
@@ -137,7 +137,7 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-container">
+        <div class="container">
             <p>&copy; 2024 Szymon Urbański. All rights reserved.</p>
         </div>
     </footer>
