--- a/skills.html
+++ b/skills.html
@@ -87,17 +87,17 @@
                         <tr>
                             <td>Java</td>
                             <td>Basic</td>
-                            <td>Learned basics at university.</td>
+                            <td>Learnt basics at university.</td>
                         </tr>
                         <tr>
                             <td>C / C++</td>
                             <td>Basic</td>
-                            <td>Learned basics at university.</td>
+                            <td>Learnt basics at university.</td>
                         </tr>
                         <tr>
                             <td>PHP</td>
                             <td>Basic</td>
-                            <td>Learned basics at university.</td>
+                            <td>Learnt basics at university.</td>
                         </tr>
                     </tbody>
                 </table>
